--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,3 @@
-git.init=#1
 db.username=root
 db.pass=port40
 db.url=jdbc:mysql://localhost:3306/userbase?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=GMT
@@ -9,4 +8,7 @@ hibernate.hbm2ddl.auto=update
 #hibernate.hbm2ddl.auto=create-drop
 #hibernate.hbm2ddl.auto=create
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-strange.this=3
+# -- diff
+role.admin=ROLE_ADMIN
+role.default=ROLE_USER
+git.init=#2
