--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
       <version>5.4.27.Final</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.2.0.Final</version>
+    </dependency>
+
     <!--   __________ thymeleaf ___________  -->
     <dependency>
       <groupId>org.thymeleaf</groupId>
